2006-10-04  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-tooltip.c: Fit the tooltip within the screen
	  Fixes: NB#42275

2006-10-04  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.93

2006-10-04  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/hn-item-dummy.c: Show the child!!!
	* hildon-navigator/hildon-navigator-item.c: Removed widget
	private member, using now GtkBin child public member
	* hildon-navigator/hildon-navigator-item.h: Added size of
	buttons

2006-10-04  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-background-select-dialog.c:
	  - make system-modal
	  - reverse stretched and tiled
	*  hildon-home/{background-manager.h: reverse stretched and tiled
	* hildon-home/hildon-home-window.c: error notes made system modal too

2006-10-04  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/{background-manager.c,
	  hildon-home-background-select-dialog.c}:
	  Applied various fixes to cancellation problems

2006-10-04  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/hn-item-dummy.[ch]: New child class of
	HildonNavigatorItem to have dummy buttons.
	* hildon-navigator/hildon-navigator-item.c: Improved GObject
	code and code cleanup.
	* hildon-navigator/hildon-navigator-panel.c: Created dummy 
	plugins while unloading in order to show the tasknavigator never
	distorted.
	* hildon-navigator/Makefile.am: Added hn-item-dummy.[ch].

2006-10-04  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-window.c: Removed dimming of the
	  TN & SB when a dialog is shown

2006-10-04  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-others-button.c: We do need to create the
	  directory if not there

2006-10-04  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-switcher.c: Do not reset the thumb
	  flag after a toggle but only when we start the timer

2006-10-04  Johan Bilien <johan.bilien@nokia.com>
